# image-gallery-plugin

./: .gitignore  CMakeLists.txt  image_gallery.description.json  prebuild.sh  webpack.config.js
app/: main.cpp
app/assets/javascripts/: admin.js
app/assets/javascripts/admin/: gallery.js
app/assets/stylesheets/: application.scss
lib/: admin.js  admin.js.cpp  application.css  application.css.cpp
